<?xml version="1.0" encoding="utf-8"?>
<com.hyper.sidebar.view.PhotoLineSubView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sidebar="http://schemas.android.com/apk/res/com.hyper.sidebar"
    android:paddingBottom="@dimen/recent_photo_padding_bottom"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/recent_photo_size"
        android:layout_height="@dimen/recent_photo_size"
        android:layout_marginLeft="@dimen/recent_photo_padding_vertical"
        android:layout_marginRight="@dimen/recent_photo_padding_vertical"
        android:layout_gravity="center"
        android:background="#9a404040"
        android:foreground="@drawable/photo_mask"
        android:scaleType="centerCrop"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/load_fail"
        android:layout_width="@dimen/recent_photo_size"
        android:layout_height="@dimen/recent_photo_size"
        android:layout_marginLeft="@dimen/recent_photo_padding_vertical"
        android:layout_marginRight="@dimen/recent_photo_padding_vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="13.5dp"
        android:textColor="#ccffffff"
        android:text="@string/fail_to_load_image"
        android:background="#181818"
        android:visibility="invisible"/>
    <ImageView
        android:id="@+id/media_type_badge"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:background="@drawable/media_button_background"
        android:contentDescription="@string/media_play"
        android:padding="7dp"
        android:src="@drawable/ic_media_play"
        android:visibility="invisible" />
    <RelativeLayout
        android:id="@+id/open_gallery"
        android:layout_width="@dimen/recent_photo_size"
        android:layout_height="@dimen/recent_photo_size"
        android:layout_marginLeft="@dimen/recent_photo_padding_vertical"
        android:layout_marginRight="@dimen/recent_photo_padding_vertical"
        android:background="@drawable/open_gallery"
        android:visibility="invisible">
        <TextView
            android:id="@+id/open_gallery_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/open_gallery_item_text_bottom"
            android:textSize="10dp"
            android:textColor="#60ffffff"
            android:text="@string/open_gallery"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/show_more"
        android:layout_width="@dimen/recent_photo_size"
        android:layout_height="@dimen/recent_photo_size"
        android:layout_marginLeft="@dimen/recent_photo_padding_vertical"
        android:layout_marginRight="@dimen/recent_photo_padding_vertical"
        android:background="@drawable/more_photo"
        android:visibility="invisible">
        <TextView
            android:id="@+id/show_more_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/open_gallery_item_text_bottom"
            android:textSize="10dp"
            android:textColor="@color/content_view_interval_more_color"
            android:text="@string/load_more"/>
    </RelativeLayout>
</com.hyper.sidebar.view.PhotoLineSubView>
